# quelque

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  sync-to-hub.yml
.streamlit/: config.toml
docs/source/: architecture.md  conf.py  index.rst  notebooks.md  overview.md  usage.md
notebooks/: 01_repo_overview.ipynb  02_usage_examples.ipynb
src/quelque/: __init__.py  audio.py  cache.py  chunking.py  cli.py  config.py  exporters.py  pipeline.py  schemas.py
src/quelque/providers/: __init__.py  notes.py  transcription.py
tests/: test_cache.py  test_chunking.py  test_config.py  test_exporters.py  test_pipeline.py  test_smoke.py
